adjusting for secure http resource calls

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<div class="container">
 						<nav class="navbar navbar-expand-lg justify-content-between">
 							<a class="navbar-brand" href="#">
-								<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="267.58px" height="72.718px" viewBox="0 0 267.58 72.718" enable-background="new 0 0 267.58 72.718" xml:space="preserve">
+								<svg version="1.1" id="Layer_1" xmlns="//www.w3.org/2000/svg" xmlns:xlink="//www.w3.org/1999/xlink" x="0px" y="0px" width="267.58px" height="72.718px" viewBox="0 0 267.58 72.718" enable-background="new 0 0 267.58 72.718" xml:space="preserve">
 									<g>
 										<path class="logo" fill="#40A629" d="M59.007,26.813v39.2c-6.412,3.498-18.507,6.705-29.291,6.705c-20.984,0-29.583-9.619-29.583-22.297
 											c0-13.99,12.241-21.859,28.271-21.859c7.578,0,14.135,1.457,19.09,3.497v-5.246c0-10.346-6.703-15.883-18.798-15.883
@@ -124,7 +124,7 @@
 								<span>
 									<img src="/img/team/serg.jpg" alt="Alexander D. Thomas" />
 									<a href="" class="btn" target="_blank">
-										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
 									</a>
 								</span>
 								<h3>Alexander D. Thomas</h3>
@@ -136,7 +136,7 @@
 								<span>
 									<img src="/img/team/serg.jpg" alt="Donsun Nadeau" />
 									<a href="" class="btn" target="_blank">
-										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
 									</a>
 								</span>
 								<h3>Donsun Nadeau</h3>
@@ -148,7 +148,7 @@
 								<span>
 									<img src="/img/team/serg.jpg" alt="Serg Chernata" />
 									<a href="https://www.linkedin.com/in/sergchernata/" class="btn" target="_blank">
-										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
 									</a>
 								</span>
 								<h3>Sergey Chernata</h3>
@@ -160,7 +160,7 @@
 								<span>
 									<img src="/img/team/serg.jpg" alt="Samir Zemmouri" />
 									<a href="" class="btn" target="_blank">
-										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
 									</a>
 								</span>
 								<h3>Samir Zemmouri</h3>
@@ -205,7 +205,7 @@
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+		<script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<script src="js/main.js"></script>
