animation delay classes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</section>
 		</header>
 		<main>
-			<div id="placeholder">
+			<div id="placeholder" class="page">
 				<div class="container ptb20">
 					<div class="row animate fade-in">
 						<div class="col-lg-6 offset-lg-3 text-center">
@@ -89,7 +89,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="paper">
+			<div id="paper" class="page">
 				<div class="container ptb20 animate fade-in">
 					<div class="row">
 						<div class="col-lg-6 offset-lg-3 text-center">
@@ -113,7 +113,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="team">
+			<div id="team" class="page">
 				<div class="container ptb20">
 					<div class="row animate fade-in">
 						<div class="col-lg-6 offset-lg-3 text-center">
@@ -122,9 +122,9 @@
 							<hr/>
 						</div>
 					</div>
-					<div class="row animate fade-in">
+					<div class="row">
 						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure>
+							<figure class="animate fade-in delay">
 								<span>
 									<img src="/img/team/serg.jpg" alt="Alexander D. Thomas" />
 									<a href="" class="btn" target="_blank">
@@ -136,7 +136,7 @@
 							</figure>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure>
+							<figure class="animate fade-in delay1">
 								<span>
 									<img src="/img/team/serg.jpg" alt="Donsun Nadeau" />
 									<a href="" class="btn" target="_blank">
@@ -148,7 +148,7 @@
 							</figure>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure>
+							<figure class="animate fade-in delay2">
 								<span>
 									<img src="/img/team/serg.jpg" alt="Serg Chernata" />
 									<a href="https://www.linkedin.com/in/sergchernata/" class="btn" target="_blank">
@@ -160,7 +160,7 @@
 							</figure>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure>
+							<figure class="animate fade-in delay3">
 								<span>
 									<img src="/img/team/serg.jpg" alt="Samir Zemmouri" />
 									<a href="" class="btn" target="_blank">
@@ -175,7 +175,7 @@
 				</div>
 			</div>
 		</main>
-		<footer id="contact">
+		<footer id="contact" class="page">
 			<div class="container pt20 pb4 animate fade-in">
 				<div class="row">
 					<div class="col-lg-6 offset-lg-3 text-center">
