highlight nav element on scroll

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
 	</head>
-	<body id="home">
+	<body>
 
 		<header>
 			<div class="nav-container">
@@ -71,7 +71,7 @@
 					</div>
 				</div>
 			</div>
-			<section class="banner text-white ptb20">
+			<section class="banner text-white ptb20 page" id="home">
 				<div class="container text-center animate fade-in">
 					<h1>Cryptocurrency Fund</h1>
 					<p>Some quick blurb about the fund or it's purpose, leading into...</p>
