--- a/index.html
+++ b/index.html
@@ -183,21 +183,25 @@
 							<p class="mb3">Potential investors or partners, please fill out the form below.</p>
 					</div>
 				</div>
-				<form>
+
+				<div id="form-messages"></div>
+
+				<form id="ajax-contact" method="post" action="mailer.php">
 					<div class="row">
-						<div class="col-lg-6 offset-lg-3 text-center">
+						<div class="col-lg-6 offset-lg-3">
 							<div class="form-group">
 								<label for="name">Name</label>
-								<input type="email" class="form-control" id="name" placeholder="Your Name">
+								<input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required>
 							</div>
 							<div class="form-group">
 								<label for="email">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="you@example.com">
+								<input type="email" class="form-control" name="email" id="email" placeholder="you@example.com" required>
 							</div>
 							<div class="form-group">
 								<label for="message">Message</label>
-								<textarea class="form-control" id="message" rows="3"></textarea>
+								<textarea class="form-control" name="message" id="message" rows="3" required></textarea>
 							</div>
+							<button class="btn" type="submit">Send Message</button>
 						</div>
 					</div>
 				</form>
