added call to action button and header copy

--- a/index.html
+++ b/index.html
@@ -73,8 +73,13 @@
 			</div>
 			<section class="banner text-white ptb20 page" id="home">
 				<div class="container text-center animate fade-in">
-					<h1>Cryptocurrency Fund</h1>
-					<p>Some quick blurb about the fund or it's purpose, leading into...</p>
+					<div class="row animate fade-in">
+						<div class="col-lg-6 offset-lg-3 text-center">
+							<h1>Cryptocurrency Fund</h1>
+							<p>Aver Group LLC navigates the  cutting edge digital asset class to deliver moderate risk and high performance objectives to its investors.</p>
+							<a class="btn" href="#paper">See How</a>
+						</div>
+					</div>
 				</div>
 			</section>
 		</header>
