restructuring the team section layout

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					</div>
 				</div>
 			</div>
-			<section class="banner text-white ptb20 page" id="home">
+			<section class="banner text-white page" id="home">
 				<div class="container text-center animate fade-in">
 					<div class="row animate fade-in">
 						<div class="col-lg-6 offset-lg-3 text-center">
@@ -100,7 +100,7 @@
 		</header>
 		<main>
 			<div id="overview" class="page">
-				<div class="container ptb20">
+				<div class="container">
 					<div class="row animate fade-in">
 						<div class="col-lg-8 offset-lg-2 text-center">
 							<h2>Fund Overview</h2>
@@ -147,7 +147,7 @@
 				</div>
 			</div>
 			<div id="what_is_crypto" class="page">
-				<div class="container ptb20">
+				<div class="container">
 					<div class="row animate fade-in">
 						<div class="col-lg-8 offset-lg-2 text-center">
 							<h2>What are Cryptoassets?</h2>
@@ -184,7 +184,7 @@
 				</div>
 			</div>
 			<div id="why_invest" class="page">
-				<div class="container ptb20">
+				<div class="container">
 					<div class="row animate fade-in">
 						<div class="col-lg-8 offset-lg-2 text-center">
 							<h2>Why Invest in Crypto</h2>
@@ -233,7 +233,7 @@
 				</div>
 			</div>
 			<div id="paper" class="page">
-				<div class="container ptb20 animate fade-in">
+				<div class="container animate fade-in">
 					<div class="row">
 						<div class="col-lg-8 offset-lg-2 text-center">
 							<h2>Private Placement Memorandum</h2>
@@ -262,66 +262,73 @@
 				</div>
 			</div>
 			<div id="team" class="page">
-				<div class="container ptb20">
+				<div class="container">
 					<div class="row animate fade-in">
 						<div class="col-lg-8 offset-lg-2 text-center">
 							<h2>Why Invest With Us</h2>
 							<p class="mb1 text-justify">While investing in crypto has the potential to be very lucrative, it can be a daunting prospect. As with many early stage technologies, the digital asset market has developed for function rather than form, and requires a large degree of technical understanding to navigate. The space is comprised of many independent exchanges, obscure transaction procedures, and little to no customer service or support. For many it is difficult to even know where to begin.</p>
-							<p class="mb3 text-justify">At Aver, we dedicated ourselves to mastering the intricacies of the crypto marketplace. We learned to identify and avoid its pitfalls, developed security procedures, and personally invested in early stage blockchain companies. Now Aver wants to offer this honed expertise to you.</p>
+							<p class="text-justify">At Aver, we dedicated ourselves to mastering the intricacies of the crypto marketplace. We learned to identify and avoid its pitfalls, developed security procedures, and personally invested in early stage blockchain companies. Now Aver wants to offer this honed expertise to you.</p>
+							<hr class="mb3 mt3" />
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure class="animate fade-in delay">
-								<span>
-									<img src="/img/team/alex.jpg" alt="Alexander D. Thomas" />
-									<!--<a href="" class="btn" target="_blank">
-										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
-									</a>-->
-								</span>
-								<h3>Alexander D. Thomas</h3>
-								<h5>CEO | Co-Founder</h5>
-								<p>Mr. Thomas oversees the funding and portfolio investment strategy of the Fund.</p>
-							</figure>
+					<div class="row animate fade-in profile">
+						<div class="col-lg-2 offset-lg-2 col-md-4 col-sm-12 text-center">
+							<span>
+								<img src="/img/team/alex.jpg" alt="Alexander D. Thomas" />
+								<!--<a href="" class="btn" target="_blank">
+									<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+								</a>-->
+							</span>
+							<h3>Alexander D. Thomas</h3>
+							<h5>CEO | Co-Founder</h5>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure class="animate fade-in delay1">
-								<span>
-									<img src="/img/team/donsun.jpg" alt="Donsun Nadeau" />
-									<!--<a href="" class="btn" target="_blank">
-										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
-									</a>-->
-								</span>
-								<h3>Donsun Nadeau</h3>
-								<h5>CFO | Co-Founder</h5>
-								<p>Donsun Nadeau manages all accounting related activities, including collection of funds, distribution, and tax compliance.</p>
-							</figure>
+						<div class="col-lg-6 col-md-8 col-sm-12">
+							<p>Mr. Thomas oversees the funding and portfolio investment strategy of the Fund.</p>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure class="animate fade-in delay2">
-								<span>
-									<img src="/img/team/serg.jpg" alt="Serg Chernata" />
-									<a href="https://www.linkedin.com/in/sergchernata/" class="btn" target="_blank">
-										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
-									</a>
-								</span>
-								<h3>Sergey Chernata</h3>
-								<h5>CTO | Co-Founder</h5>
-								<p>Sergey Chernata researches and implements the technologies used by the fund as well as the overall security of data and assets held.</p>
-							</figure>
+					</div>
+					<div class="row animate fade-in profile">
+						<div class="col-lg-2 offset-lg-2 col-md-4 col-sm-12 text-center">
+							<span>
+								<img src="/img/team/donsun.jpg" alt="Donsun Nadeau" />
+								<!--<a href="" class="btn" target="_blank">
+									<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+								</a>-->
+							</span>
+							<h3>Donsun Nadeau</h3>
+							<h5>CFO | Co-Founder</h5>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-12 text-center">
-							<figure class="animate fade-in delay3">
-								<span>
-									<img src="/img/team/samir.jpg" alt="Samir Zemmouri" />
-									<!--<a href="" class="btn" target="_blank">
-										<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
-									</a>-->
-								</span>
-								<h3>Samir Zemmouri</h3>
-								<h5>Portfolio Manager</h5>
-								<p>Mr. Zemmouri is an up and coming young analyst deeply entrenched with leaders in the cryptocurrency investment community.</p>
-							</figure>
+						<div class="col-lg-6 col-md-8 col-sm-12">
+							<p>Donsun Nadeau manages all accounting related activities, including collection of funds, distribution, and tax compliance.</p>
+						</div>
+					</div>
+					<div class="row animate fade-in profile">
+						<div class="col-lg-2 offset-lg-2 col-md-4 col-sm-12 text-center">
+							<span>
+								<img src="/img/team/serg.jpg" alt="Serg Chernata" />
+								<a href="https://www.linkedin.com/in/sergchernata/" class="btn" target="_blank">
+									<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+								</a>
+							</span>
+							<h3>Sergey Chernata</h3>
+							<h5>CTO | Co-Founder</h5>
+						</div>
+						<div class="col-lg-6 col-md-8 col-sm-12">
+							<p>Sergey Chernata researches and implements the technologies used by the fund as well as the overall security of data and assets held.</p>
+						</div>
+					</div>
+					<div class="row animate fade-in profile">
+						<div class="col-lg-2 offset-lg-2 col-md-4 col-sm-12 text-center">
+							<span>
+								<img src="/img/team/samir.jpg" alt="Samir Zemmouri" />
+								<!--<a href="" class="btn" target="_blank">
+									<svg xmlns="//www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="linkedin" d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+								</a>-->
+							</span>
+							<h3>Samir Zemmouri</h3>
+							<h5>Portfolio Manager</h5>
+						</div>
+						<div class="col-lg-6 col-md-8 col-sm-12">
+							<p>Mr. Zemmouri is an up and coming young analyst deeply entrenched with leaders in the cryptocurrency investment community.</p>
 						</div>
 					</div>
 				</div>
