responsive table and Thomas Lee copy tweak

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- Bootstrap CSS -->
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Titillium+Web:600" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Titillium+Web:600" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/main.css">
 
@@ -161,7 +161,7 @@
 						</div>
 						<div class="col-lg-6">
 							<p>In January 2018, Bitcoin hit a record trade value of approximately $20,000. Weeks after, market corrections led to an almost 65% downturn and yet Bitcoin was still worth 690% more than the start of 2017.</p>
-							<p>Much like the volatility and inevitable success that came with the computer age, unpredictability within the digital asset class stems from a global inability to accurately value the extraordinary potential that comes from cryptocurrencies. Aver Group utilizes a mesh of tech and investment strategies to capitalize on cutting edge early-stage blockchain companies. Blockchain technology will redefine how the world does business.</p>
+							<p>Much like the volatility and inevitable success that came with the computer age, unpredictability within the digital asset class stems from a global inability to accurately value the extraordinary potential that comes from cryptocurrencies. <strong>In this video, industry analyst Thomas Lee analyzes past trends and generations to infer future growth and possibilities of crypto asset class.</strong></p>
 						</div>
 					</div>
 					<div class="row animate fade-in">
@@ -191,7 +191,7 @@
 							<p class="text-justify">The advent of cryptocurrencies, blockchain, and crowdsourcing has drastically changed the way early stage companies choose to fundraise. This same change has also given smaller investors access to lucrative investments before only available to venture capital groups and wealthy individuals. Before, heavy financial regulation allowed only accredited investors to invest in early stage investments like an IPO; investments which are the most lucrative. Now, companies are choosing to accept cryptocurrencies for fundraising, bypassing the traditional fundraising route. Through this less centralized space, startups can attract vital funding from a wider range of investors and with far lower fees.</p>
 						</div>
 					</div>
-					<div class="tableWrap animate fade-in">
+					<div class="tableWrap animate fade-in table-responsive">
 						<table class="table">
 							<tr>
 								<th scope="col"></th>
