personal bio tweak, css adjustment for large screen spacing

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 							<h5>CTO | Co-Founder</h5>
 						</div>
 						<div class="col-lg-6 col-md-8 col-sm-12">
-							<p>Sergey Chernata researches and implements the technologies used by the fund as well as the overall security of data and assets held.</p>
+							<p>Sergey Chernata is the technical co-founder at Aver Group LLC. He is a VP of Technology at a nation-wide consumer goods company. With over 10 years of professional experience and multiple degrees, Sergey builds businesses through code and best technology practices. Sergey mined Bitcoin in 2013 and managed his personal cryptoasset portfolio, reaching overall return on investment of 50x.</p>
 						</div>
 					</div>
 					<div class="row animate fade-in profile">
