small tweaks to styles, copy, and updated team images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta property="og:image" content="https://avergroupllc.com/img/thumbnail.png">
+		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:width" content="1024">
+		<meta property="og:image:height" content="1024">
 
 		<!-- Bootstrap CSS -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Titillium+Web:600" rel="stylesheet">
@@ -127,8 +131,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
-								<h4>Moderate Risk</h4>
-								<p>Conservative value investing in a highly dynamic market.</p>
+								<h4>Verified Accounting</h4>
+								<p>Accounting practices are verified by a third party.</p>
 							</span>
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
@@ -140,7 +144,7 @@
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
 								<h4>Focused on Security</h4>
-								<p>Strictly implementing industry best practices.</p>
+								<p>Securing your funds through industry best practices.</p>
 							</span>
 						</div>
 					</div>
@@ -169,7 +173,7 @@
 							<blockquote cite="https://www.youtube.com/watch?v=GGberGnxiJk">
 								<p>This is not the internet bubble, this is a lot more like emerging markets becoming an asset class.</p>
 								<footer>
-									<img width="50" height="50" src="https://pbs.twimg.com/profile_images/510834353283145729/CtFjYadW_400x400.jpeg" />
+									<img width="60" height="60" src="https://pbs.twimg.com/profile_images/510834353283145729/CtFjYadW_400x400.jpeg" />
 									<div>
 										Thomas Lee
 										<small>
@@ -313,7 +317,7 @@
 							<h5>CTO | Co-Founder</h5>
 						</div>
 						<div class="col-lg-6 col-md-8 col-sm-12">
-							<p>Sergey Chernata is the technical co-founder at Aver Group LLC. He is a VP of Technology at a nation-wide consumer goods company. With over 10 years of professional experience and multiple degrees, Sergey builds businesses through code and best technology practices. Sergey mined Bitcoin in 2013 and managed his personal cryptoasset portfolio, reaching overall return on investment of 50x.</p>
+							<p>Sergey Chernata is the technical co-founder at Aver Group LLC. He is a VP of Technology at a nation-wide consumer goods company. With over 10 years of professional experience and multiple degrees, Sergey builds businesses through code and best technology practices. Sergey mined Bitcoin in 2013 and managed his personal cryptoasset portfolio, reaching overall return on investment ratio of 25x.</p>
 						</div>
 					</div>
 					<div class="row animate fade-in profile">
