--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
+		<meta name="description" content="Aver Group LLC navigates the cutting edge digital asset class to deliver moderate risk and high performance objectives to its investors.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta property="og:image" content="https://avergroupllc.com/img/thumbnail.png">
 		<meta property="og:image:type" content="image/png">
@@ -24,7 +25,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/main.css">
 
-		<title>Aver Group, LLC</title>
+		<title>Aver Group, LLC | Cryptocurrency Investment Fund</title>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
@@ -287,7 +288,7 @@
 							<h5>CEO | Co-Founder</h5>
 						</div>
 						<div class="col-lg-6 col-md-8 col-sm-12">
-							<p>Mr. Thomas oversees the funding and portfolio investment strategy of the Fund.</p>
+							<p>Alex oversees the funding and portfolio investment strategy of the fund. Alex holds three years experience as an R&amp;D Program Manager for the military, having managed over $600M in Air Force assets. He holds an undergraduate degree in Economics from the United States Air Force Academy and is currently pursuing graduate studies in Finance at Harvard University.</p>
 						</div>
 					</div>
 					<div class="row animate fade-in profile">
@@ -302,7 +303,7 @@
 							<h5>CFO | Co-Founder</h5>
 						</div>
 						<div class="col-lg-6 col-md-8 col-sm-12">
-							<p>Donsun Nadeau manages all accounting related activities, including collection of funds, distribution, and tax compliance.</p>
+							<p>Contract Manager for the Department of Defense with 6 years experience. Air Force veteran. Undergrad at UCONN and  finishing a Masters of Finance at Harvard University.</p>
 						</div>
 					</div>
 					<div class="row animate fade-in profile">
