added custom overview icons

--- a/index.html
+++ b/index.html
@@ -114,37 +114,37 @@
 					<div class="row animate fade-in">
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
-								<h4>5x</h4>
-								<p>High performance objectives.</p>
+								<img src="https://avergroupllc.com/img/icons/5x.svg" />
+								<p>High performance objective of 5x return on investment.</p>
 							</span>
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
-								<h4>6 months</h4>
-								<p>Minimum asset tie-up time.</p>
+								<img src="https://avergroupllc.com/img/icons/6months.svg" />
+								<p>Minimum asset tie-up time of 6 months for Genesis fund.</p>
 							</span>
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
-								<h4>$10k</h4>
+								<img src="https://avergroupllc.com/img/icons/10k.svg" />
 								<p>Access to pre-IPO investments with low entry cost of $10k.</p>
 							</span>
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
-								<h4>Verified Accounting</h4>
+								<img src="https://avergroupllc.com/img/icons/verified.svg" />
 								<p>Accounting practices are verified by a third party.</p>
 							</span>
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
-								<h4>No Management Fees</h4>
+								<img width="60" height="60" src="https://avergroupllc.com/img/icons/fair.svg" />
 								<p>Profit sharing, we only get paid if you make money.</p>
 							</span>
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 text-center">
 							<span>
-								<h4>Focused on Security</h4>
+								<img width="60" height="60" src="https://avergroupllc.com/img/icons/secure.svg" />
 								<p>Securing your funds through industry best practices.</p>
 							</span>
 						</div>
