updated serg's photo and samir's bio

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 							<h5>Portfolio Manager</h5>
 						</div>
 						<div class="col-lg-6 col-md-8 col-sm-12">
-							<p>Mr. Zemmouri is an up and coming young analyst deeply entrenched with leaders in the cryptocurrency investment community.</p>
+							<p>Samir is an up and coming young analyst deeply entrenched with leaders in the cryptocurrency investment community. His brief yet successful experience ranges from managing political funds and interning for D.C. based think tanks, to managing individual private consulting for those new to cryptocurrency. The oversight of his small client pool alone has led to multiple exits at 10x gains with a total profit over $80,000 in a 4 month timeframe.</p>
 						</div>
 					</div>
 				</div>
