--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 							<h5>CFO | Co-Founder</h5>
 						</div>
 						<div class="col-lg-6 col-md-8 col-sm-12">
-							<p>Contract Manager for the Department of Defense with 6 years experience. Air Force veteran. Undergrad at UCONN and  finishing a Masters of Finance at Harvard University.</p>
+							<p>Don is a Contracts Manager for the Department of Defense and a USAF Veteran. He holds 6 years experience in R&amp;D contracting and has awarded over $1.2 Billion in Air Force contracts. Don earned his undergraduate degree at UCONN and is currently finishing a Masters of Finance at Harvard University.</p>
 						</div>
 					</div>
 					<div class="row animate fade-in profile">
